# vertex

./: README.md
swarm-os/: README.md  SUBMISSION.md  docker-compose.yml
swarm-os/agents/: Cargo.toml  Dockerfile
swarm-os/agents/src/: auction.rs  main.rs  types.rs
swarm-os/agents/tashi-vertex-stub/: Cargo.toml
swarm-os/agents/tashi-vertex-stub/src/: lib.rs
swarm-os/backend/: Dockerfile  package-lock.json  package.json
swarm-os/backend/src/: index.js  state.js  types.ts
swarm-os/frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
swarm-os/frontend/src/: App.jsx  App.module.css  index.css
swarm-os/frontend/src/components/: AgentGrid.jsx  AgentGrid.module.css  ControlPanel.jsx  ControlPanel.module.css  MeshTopology.jsx  MeshTopology.module.css  MetricsBar.jsx  MetricsBar.module.css  NavBar.jsx  NavBar.module.css  Notifications.jsx  Notifications.module.css  SafetyBanner.jsx  SafetyBanner.module.css  SafetyLog.jsx  SafetyLog.module.css  TaskFeed.jsx  TaskFeed.module.css  TaskHistory.jsx  TaskHistory.module.css
swarm-os/frontend/src/hooks/: useNotifications.js  useSwarmSocket.js
swarm-os/shared/: types.ts
